src/App.css
.App {
  text-align: center;
  overflow: hidden;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.tableRow {
  align-self: center;
}

input:focus {
  outline: none !important;
  border-color: white !important;
  box-shadow: none !important;
}

.trending-card-img-top {
  width: 100%; 
  height: 100% !important;
  object-fit: cover !important;
}

.card-img-top {
  width: 100%; 
  height: 15vw;
  object-fit: cover;
}

.sidebar {
  /* position: relative; */
  top: 0;
  height: 100vh;
  overflow-y: auto;
}
.collection-main-view {
  top: 0;
  height: 100vh;
  overflow-y: auto;
}

.collection-banner-img {
  width: 100%;
  height: 15vw;
  /* height: 220px; */
  overflow: hidden;
}

.nft-card-img {
  width: 100%;
  height: 100%;
  /* height: 220px; */
}

.collection-stats {
  text-align: center;
  font-size: smaller;
}

.main-logo {
  z-index: 999 !important;
}

.collections-dropdown {
  margin-top: 38px;
  margin-right: 50px;
  z-index: 10;
}

.contact-form {
  text-align: left;
  margin-left: 15%;
  margin-right: 15%;
}

.beat-once {
  --fa-animation-iteration-count: 1;
  cursor: pointer;
}

.flip-icon {
  transform: rotate(180deg);
  -webkit-transform: rotate(180deg);
}

.details-card {
  transition: all .2s ease-in-out;
}

.details-card:hover {
  transform: scale(1.03);
}

.filter-icon {
  border-radius: 50%;
  position: fixed;
  right: 10%;
  bottom: 10%;
  z-index: 999;
  box-shadow: 1px 0px 10px 0px gray;
} 

.trait-category {
  /* background: transparent !important;
  color: white !important; */
  cursor: pointer;
}

/* Hide number input arrows on Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Hide number input arrows on Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

